[package]
name = "pluggable_interrupt_template"
version = "0.4.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
pc-keyboard = "0.8.0"
pluggable_interrupt_os = "0.5.0"
bare_metal_modulo = "1"

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.crossbeam]
version = "0.8"
default-features = false
